// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner matches snapshot with custom className 1`] = `
<div
  class="flex items-center justify-center custom-class"
>
  <div
    class="animate-spin rounded-full border-b-2 border-blue-600 dark:border-blue-400 h-8 w-8"
  />
</div>
`;

exports[`LoadingSpinner matches snapshot with default size 1`] = `
<div
  class="flex items-center justify-center "
>
  <div
    class="animate-spin rounded-full border-b-2 border-blue-600 dark:border-blue-400 h-8 w-8"
  />
</div>
`;

exports[`LoadingSpinner matches snapshot with large size 1`] = `
<div
  class="flex items-center justify-center "
>
  <div
    class="animate-spin rounded-full border-b-2 border-blue-600 dark:border-blue-400 h-12 w-12"
  />
</div>
`;

exports[`LoadingSpinner matches snapshot with small size 1`] = `
<div
  class="flex items-center justify-center "
>
  <div
    class="animate-spin rounded-full border-b-2 border-blue-600 dark:border-blue-400 h-4 w-4"
  />
</div>
`;
